adding/displatying recipes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.4/purify.min.js"
+      integrity="sha512-Ppv1jKk0X8u28/MsfyW8gWQmfP2HDmCJd03tC4qrFoVZwUdjfkbX14wiBP5akSlM00EP8Kgt1UDZfvdFKLVNmg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   </head>
   <body>
     <div class="container">
