--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div class="container">
         <form
           id="recipe-form"
-          class="p-4 m-4 shadow-sm rounded-3 border border-primary"
+          class="p-4 m-4 d-flex flex-wrap shadow-sm rounded-3 border border-primary"
         >
-          <div class="form-group col-md-4 my-2">
+          <div class="form-group col-md-4 m-2">
             <label for="name">Name of Recipe</label>
             <input
               type="text"
@@ -41,7 +41,7 @@
               placeholder="e.g. Morning Brew"
             />
           </div>
-          <div class="form-group col-md-4 my-2">
+          <div class="form-group col-md-4 m-2">
             <label for="method">Brew Method</label>
             <input
               type="text"
@@ -52,7 +52,7 @@
               placeholder="e.g. v60 Pour over"
             />
           </div>
-          <div class="form-group col-md-4 my-2">
+          <div class="form-group col-md-4 m-2">
             <label for="roast">Roast</label>
             <input
               type="text"
@@ -63,7 +63,7 @@
               placeholder="e.g. Full City"
             />
           </div>
-          <div class="form-group col-md-4 my-2">
+          <div class="form-group col-md-4 m-2">
             <label for="grind">Grinf size</label>
             <input
               type="text"
@@ -74,7 +74,7 @@
               placeholder="e.g. 30"
             />
           </div>
-          <div class="form-group col-md-4 my-2">
+          <div class="form-group col-md-4 m-2">
             <label for="ratio">Ratio</label>
             <input
               type="text"
@@ -85,7 +85,7 @@
               placeholder="e.g. 1:16"
             />
           </div>
-          <div class="form-group col-md-4 my-2">
+          <div class="form-group col-md-4 m-2">
             <label for="note">Notes (optional)</label>
             <input
               type="text"
@@ -94,7 +94,7 @@
               autocomplete="off"
             />
           </div>
-          <div class="form-group mt-4">
+          <div class="form-group col-12 m-2">
             <input type="submit" value="Add Recipe" class="btn btn-primary" />
           </div>
         </form>
